--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{variables.tex}[2015/07/28 v1.1 -- Syllabus variables]
+\ProvidesFile{variables.tex}[2016/09/03 v1.2 -- Syllabus variables]
 
 \usepackage{xspace} % make manual spaces (like \mycmd\ ) unnecessary
 \usepackage{xifthen} % provides \isempty test
@@ -31,7 +31,7 @@
   \renewcommand\pphone{\addfontfeatures{Numbers=Monospaced}#1\xspace}}
 \newcommand\email[1]{
   \renewcommand\pemail{\href{mailto:#1}{#1}\xspace}}
-\newcommand\officehours[2][Bayview G410]{
+\newcommand\officehours[2][Main Building, Room 106]{
   \renewcommand\poffice{#1\xspace}
   \renewcommand\phours{#2\xspace}}
 %
