--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -1,51 +1,95 @@
-\ProvidesFile{grades.tex}[2014/09/02 v1.1 -- Course policy]
+\ProvidesFile{grades.tex}[2016/09/03 v2.0 -- Course policy]
 
-\subsection{Grading System at Tyndale}
+\subsection{Grading System at AST}
 \label{grades}
 
-Tyndale University College provides the following general benchmarks for
-summative assessment. I may furnish more detailed rubrics for particular
-assignments. Note also (at right) the percentage ranges and grade point values
-for letter grade designations.
+AST's \href{http://www.astheology.ns.ca/webfiles/AST_2016Calendar_web(A5)-06APR2016.pdf}{Academic
+Calendar} provides guidelines and detailed criteria for academic
+assessment. Marks are assigned by letter grade using the benchmarks in
+\autoref{grade-syst}.
 
-\mparshift{0.5\baselineskip}
-\marginpar{\lining
-\footnotesize
-\begin{tabular}[t]{@{}>{\scshape}c@{\hspace{1em}}c@{\hspace{1em}}c@{}}
-  \toprule
-  & \emph{percent} & \emph{pts.} \\ [1ex]
-  +           & 90--100   & 4.00 \\
-  a           & 85--89    & 4.00 \\
-  \char"2212  & 80--84    & 3.70 \\ [1ex]
-  +           & 77--79    & 3.30 \\
-  b           & 73--76    & 3.00 \\
-  \char"2212  & 70--72    & 2.70 \\ [1ex]
-  +           & 67--69    & 2.30 \\
-  c           & 63--66    & 2.00 \\
-  \char"2212  & 60--62    & 1.70 \\ [1ex]
-  +           & 57--59    & 1.30 \\
-  d           & 53--56    & 1.00 \\
-  \char"2212  & 50--52    & 0.70 \\ [1ex]
-  f           & 0--49     & 0.00 \\
-  \bottomrule
-\end{tabular}}
+\begin{table}[htbp]
+  \centering
+  {\lining
+  \begin{tabular}{lll}
+    \toprule
+%    Letter      & Percent & Assessment        \\
+%	\midrule
+    A+          & 94--100    & Exceptional    \\
+    A           & 87--93     & Outstanding    \\
+    A\char"2212 & 80--86     & Excellent      \\ [1ex]
+    B+          & 77--79     & Good           \\
+    B           & 73--76     & Acceptable     \\
+    B\char"2212 & 70--72     & Marginal       \\ [1ex]
+    C           & 60--69     & Unsatisfactory \\
+    F           & 0--59      & Failure        \\
+    FP          & 0          & Failure due to Plagiarism \\
+    \bottomrule
+  \end{tabular}}
+  \caption{Summary of Grading System}
+  \label{grade-syst}
+\end{table}
 
-\begin{description}
-  \item[A, B -- Excellent, Good]
-    These grades are earned only when evidence indicates that the student
-    has consistently maintained above average progress in the subject.
-    Sufficient evidence may involve such qualities as creativity, originality,
-    thoroughness, responsibility and consistency.
-  \item[C -- Satisfactory]
-    This grade means that the student has fulfilled the requirements of the
-    subject to the satisfaction of the instructor. These requirements include
-    the understanding of subject matter, adequacy and promptness in the
-    preparation of assignments and participation in the work of the class.
-  \item[D -- Poor]
-    This grade indicates that the accuracy and content of work submitted meets
-    only the minimal standards of the instructor. Consistent performance at
-    this level is considered inadequate for graduation.
-  \item[F -- Failing]
-    Work submitted is inadequate. Attitude, performance and attendance are
-    considered insufficient for a passing grade.
-\end{description}
+% More detailed grading criteria from pp. 61--62 of `16.0406-I2-AST Academic Calendar.pdf'
+%
+%\begin{description}
+%  \item[A+ (94-100) ‘Exceptional’]
+%    A superior performance with consistent evidence of a comprehensive,
+%    incisive grasp of all aspects of the subject matter; a very wide
+%    knowledge base; insightful critical evaluation and analysis of the
+%    material; an exceptional capacity for original, creative, and/or
+%    logical thinking; an exceptional ability to organize, analyse,
+%    synthesize, and to express thoughts fluently.
+%  \item[A (87-93) ‘Outstanding’]
+%    A comprehensive grasp of the subject matter, outstanding evidence of
+%    original thought; sound critical evaluation of the material; an
+%    excellent ability to organize, analyse, synthesize and to express
+%    thoughts; mastery of an extensive knowledge base.
+%  \item[A- (80-86) ‘Excellent’]
+%    All the qualities of a B-level performance and an excellent capacity
+%    for original, creative, and/ or logical thinking; excellent ability
+%    to organize, analyse, synthesize, and integrate ideas; broad
+%    knowledge base in the subject matter.
+%  \item[B+ (77-79) ‘Good’]
+%    A good performance with substantial knowledge of the subject matter;
+%    a very good understanding of the relevant issues; familiarity with
+%    relevant literature and techniques; good ability to organize,
+%    analyse, and examine the material in a constructive and critical
+%    manner.
+%  \item[B (73-76) ‘Acceptable’]
+%    A generally adequate performance with a good knowledge of the
+%    subject matter; a fair understanding of relevant issues; some
+%    ability to work with relevant literature and techniques; some
+%    ability to develop solutions to difficult problems related to the
+%    subject material.
+%  \item[B- (70-72) ‘Marginally Acceptable’]
+%    Some familiarity with the subject material; some understanding.
+%    Satisfactory understanding of relevant issues; attempts to solve
+%    moderately difficult problems related to the subject material in a
+%    critical and analytical manner are only partially successful.
+%  \item[C (60-69) ‘Unsatisfactory’]
+%    A C grade indicates unsatisfactory academic performance. At the
+%    discretion of the instructor, supplemental work may be negotiated to
+%    upgrade the mark to a B range. A student may carry two C grades
+%    without penalty in all courses except Foundations Courses,
+%    Supervised Field Education, Supervised Ministry Practicum and the
+%    Graduate Project. In these courses, a minimum grade of B- is
+%    required to graduate. A student who receives a C in a Foundation
+%    course must repeat the course to achieve a B- or better, and cannot
+%    use the C grade to meet prerequisite requirements for advanced
+%    courses. If the student repeats one of these courses and receives a
+%    B- or better, the previous C grade remains on the transcript and can
+%    be counted toward the total of unsatisfactory grades that may lead
+%    to academic dismissal. Credit will be given only once for any
+%    course. (See Policy on Unsatisfactory Academic Performance in the
+%    AST Student Handbook.)
+%  \item[F (0-59) ‘Failure’]
+%    Student has not grasped subject matter; does not understand issues
+%    involved; cannot work with relevant literature. (See Policy on
+%    Unsatisfactory Academic Performance in the AST Student Handbook.)
+%  \item[P ‘Pass’]
+%    Credit awarded, but no mark assigned.
+%  \item[FP ‘Failure due to Plagiarism’]
+%    A student will receive this grade only after proven incident(s) of
+%    plagiarism in a course.
+%\end{description}
