add first W2017 course: Genesis

--- a/BF/BF 1001 DS Keller 2016.tex
+++ b/BF/BF 1001 DS Keller 2016.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[1.0]{BF 1001}
+\coursecode[3.2.1]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -39,10 +39,10 @@
 \email{ddriver@astheology.ns.ca}
 \officehours{Thursdays, 2:00--4:00 \PM}
 
-\semester{Fall Term 2016}
+\semester{Keller DS 2016--17}
 \meets{Thursdays}% \meets{on}{at}{in}
-      {9:00--11:30 \AM}
-      {Three (3)}
+      {2:00--3:00 \PM}
+      {Online}
 \website{astheology.ns.ca}
 \cdescription{% copy from the current Academic Calendar
 	This course explores the First Testament of the Bible as a
@@ -90,9 +90,9 @@
 	Hebrew Bible/Old Testament and its uses, and monitor and test their
 	individual attitudes and assumptions. They should be able to extend
 	their awareness of the Bible's contemporary readers to the Bible's
-	long history of reception. Finally, students should be able to infer
+	long history of reception. Finally, students should begin to infer
 	what Jesus meant in speaking of ``the law of Moses, the prophets,
-	and the psalms'' (Luke 24:44), and so begin to hear claims about New
+	and the psalms'' (Luke 24:44), and so learn to hear claims about New
 	Testament fulfilment of scripture in light of the unique voice that
 	the Old Testament retains along side of the New in Christian
 	scripture.
@@ -112,8 +112,8 @@
 \label{texts}
 
 The following texts are required. Students are strongly encouraged to
-purchase their own copies. Library copies have been placed on a 2-hour
-reserve.
+purchase their own copies. Library copies that are not reference works
+have been placed on a 2-hour reserve.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -170,8 +170,8 @@ per week, will either be placed on reserve or made available for
 download through the course website.
 
 Students are not strictly required to read this additional material;
-then again, students who choose not to read it should not expect to earn
-an ``A'' for the course.
+then again, students who choose not to read it should not expect to
+receive an ``A'' for the course.
 
 \section{Course Outline}
 \label{outline}
@@ -192,30 +192,30 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & C. Seitz             &  8 Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & P. Enns              & 15 Sep. \\
-		& Exodus 1--18         & \HBFB{65--75}   & C. Mathews McGinnis  & 22 Sep. \\
-		& Exodus 19--40        & \cite[all]{heschel} & W. Moberly       & 29 Sep. \\
-		& Deuteronomy (34)     & \HBFB{77--99}   & J. Levenson          &  6 Oct. \\ [1ex]
+		& Genesis 1--11        & \HBFB{1--26}    & C. Seitz             & 20 Oct. \\
+		& Genesis 12--50       & \HBFB{27--64}   & G. Anderson          & 27 Oct. \\
+		& Exodus 1--18         & \HBFB{65--75}   & C. Mathews McGinnis  &  3 Nov. \\
+		& Exodus 19--40        & \cite[all]{heschel} & Intro to Heschel & 10 Nov. \\
+		& Deuteronomy (34)     & \HBFB{77--99}   & J. Levenson          & 17 Nov. \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
 	\reminder{First paper is \textbf{due} at the start of class six}{}            \\
-		& Joshua, Judges (45)  & \HBFB{103--121} & P. Trible            & 13 Oct. \\
-		& 1 \& 2 Samuel (55)   & \HBFB{123--143} & R. Alter             & 20 Oct. \\
-		& 1 \& 2 Kings (47)    & \cite[all]{irenaeus} & N. MacDonald    & 27 Oct. \\ [1ex]
+		& Joshua, Judges (45)  & \HBFB{103--121} & P. Trible            & 24 Nov. \\
+		& 1 \& 2 Samuel (55)   & \HBFB{123--143} & R. Alter             &  1 Dec. \\
+		& 1 \& 2 Kings (47)    & \cite[all]{irenaeus} & Intro to Irenaeus &  8 Dec. \\ [1ex]
 
-		& Isaiah 1--12, 36--66 & \HBFB{145--168} & B. Sommer            &  3 Nov. \\
-	\noclass{Term Break (Tuesday to Thursday)}                          & 10 Nov. \\
-		& Hosea--Nahum (41)  & \HBFB{169--184}   & J. Nogalski          & 17 Nov. \\ [1ex]
+		& Isaiah 1--12, 36--66 & \HBFB{145--168} & N. MacDonald         &  15 Dec. \\
+	\noclass{Term Break}                                                & 22, 29 Dec. \\
+		& Hosea--Nahum (41)  & \HBFB{169--184}   & J. Nogalski          &  5 Jan. \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
 	\reminder{Second paper is \textbf{due} at the start of class eleven}{}        \\
-		& Psalms 1--19, 72--74, 89--106 & \HBFB{187--202} & G. Sheppard & 24 Nov. \\
-		& Ecclesiastes (12)    & \HBFB{203--246} & M. Fox, K. Dell      &  1 Dec. \\ [1ex]
+		& Psalms 1--19, 72--74, 89--106 & \HBFB{187--202} & G. Sheppard & 12 Jan. \\
+		& Ecclesiastes (12)    & \HBFB{203--246} & M. Fox, K. Dell      & 19 Jan. \\ [1ex]
 
-	\reminder{End of Term: Final marks are due for all courses}{12 Dec.} \\
+	\reminder{End of Directed Study: Final marks are due for this course}{31 Jan.} \\
 
 	\bottomrule
   \end{tabular}
@@ -235,8 +235,8 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\item I will announce \textbf{reading quizzes} throughout the
 	semester, as often as once a week. They are designed to ensure that
-	you have read the assigned material carefully. Quizzes are given in
-	class, and they may not be made up in the case of absence.
+	you have read the assigned material carefully. Students should be
+	able to answer the questions without consulting a Bible.
 
 	\item Students are to \textbf{memorize ten verses from the Psalms}
 	in the King James Version and recite it to me privately, in my
@@ -245,18 +245,18 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\item Two \textbf{short papers} will facilitate student reflection
 	on the two extended works of biblical interpretation, by
-	\cite{heschel} and \cite{irenaeus}. Each should be 4--5,000 words
+	\cite{heschel} and \cite{irenaeus}. Each should be about 3,000 words
 	long. They are due at the start of classes six and eleven,
 	respectively.
 
 	\begin{enumerate}
 
-		\item The \textbf{first} paper will articulate and evaluate
+		\item The \textbf{first paper} will articulate and evaluate
 		multiple rationales for sabbath observance by interacting with
 		biblical and post-biblical traditions. The latter must include,
 		but need not be limited to, Heschel's \emph{The Sabath}.
 
-		\item The \textbf{second} paper will explore Irenaeus' use of
+		\item The \textbf{second paper} will explore Irenaeus' use of
 		the Old Testament as Christian scripture by: succinctly
 		summarizing \emph{On the Apostolic Preaching}, selecting a
 		characteristic example of biblical interpretation in that work,
@@ -265,12 +265,11 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\end{enumerate}
 
-	\item Each student will \textbf{lead a seminar} on one of the
-	supplementary articles. The discussion, which should last between 35
-	and 45 minutes, should begin with a brief (5 min) summary of the
-	article. The balance of the time should be spent helping the class
-	elaborate, reflect on, test, challenge, or extend the main ideas
-	presented there.
+	\item To facilitate our interaction at a distance, the student will
+	submit a \textbf{one page response to the reading every week}. It
+	should be submitted to me by email on Thursdays, and it will form
+	the basis for one of two things: (a) my comments back by email, or
+	(b) our discussion via phone or video chat.
 
 \end{enumerate}
 
@@ -282,11 +281,11 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Quizzes & 25\% \\
+    Reading Quizzes & 20\% \\
     Memorization    & 10\% \\
     First Paper     & 25\% \\
     Second Paper    & 25\% \\
-    Seminar         & 15\% \\
+    Response Pages  & 20\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
