--- a/includes/title.tex
+++ b/includes/title.tex
@@ -6,7 +6,7 @@
     \newlength\toptxt
     \setlength\toptxt{.5\textwidth}
     \begin{minipage}{\textwidth}
-      \color{asturl}
+      \color{astred}
       \parbox[t]{\the\toptxt}{
         \fontsize{18}{18}\selectfont
         \textsc{\ccode\\
