--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -1,34 +1,33 @@
-\ProvidesFile{grades.tex}[2016/09/03 v2.0 -- Course policy]
-
-\subsection{Grading System at AST}
-\label{grades}
+\ProvidesFile{grades.tex}[2017/01/04 v2.1 -- Course policy]
 
 AST's \href{http://www.astheology.ns.ca/webfiles/AST_2016Calendar_web(A5)-06APR2016.pdf}{Academic
 Calendar} provides guidelines and detailed criteria for academic
-assessment. Marks are assigned by letter grade using the benchmarks in
-\autoref{grade-syst}.
+assessment. Marks are assigned by letter grade using these benchmarks.
+Note that, at AST, a grade of ``C'' is deemed ``Unsatisfactory.''
 
-\begin{table}[htbp]
-  \centering
-  {\lining
-  \begin{tabular}{lll}
-    \toprule
-%    Letter      & Percent & Assessment        \\
-%	\midrule
-    A+          & 94--100    & Exceptional    \\
-    A           & 87--93     & Outstanding    \\
-    A\char"2212 & 80--86     & Excellent      \\ [1ex]
-    B+          & 77--79     & Good           \\
-    B           & 73--76     & Acceptable     \\
-    B\char"2212 & 70--72     & Marginal       \\ [1ex]
-    C           & 60--69     & Unsatisfactory \\
-    F           & 0--59      & Failure        \\
-    FP          & 0          & Failure due to Plagiarism \\
-    \bottomrule
-  \end{tabular}}
-  \caption{Summary of Grading System}
-  \label{grade-syst}
-\end{table}
+%\autoref{grade-syst}
+%
+%\begin{table}[htbp]
+%  \centering
+%  {\lining
+%  \begin{tabular}{lll}
+%    \toprule
+%%    Letter      & Percent & Assessment        \\
+%%	\midrule
+%    A+          & 94--100    & Exceptional    \\
+%    A           & 87--93     & Outstanding    \\
+%    A\char"2212 & 80--86     & Excellent      \\ [1ex]
+%    B+          & 77--79     & Good           \\
+%    B           & 73--76     & Acceptable     \\
+%    B\char"2212 & 70--72     & Marginal       \\ [1ex]
+%    C           & 60--69     & Unsatisfactory \\
+%    F           & 0--59      & Failure        \\
+%    FP          & 0          & Failure due to Plagiarism \\
+%    \bottomrule
+%  \end{tabular}}
+%  \caption{Summary of Grading System}
+%  \label{grade-syst}
+%\end{table}
 
 % More detailed grading criteria from pp. 61--62 of `16.0406-I2-AST Academic Calendar.pdf'
 %
