--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,6 +1,6 @@
-\ProvidesFile{grades.tex}[2016/09/03 v2.0 -- Course policy]
+\ProvidesFile{grades.tex}[2016/01/04 v2.1 -- Course policy]
 
-\section{Other Policy}
+\section{Other Course Policy}
 \label{policy}
 
 Late work will not be accepted, except in genuinely extenuating
@@ -20,12 +20,7 @@ not be shared or distributed.
 Finally, as \href{http://dx.doi.org/10.1016/j.compedu.2012.10.003}{cognitive
 psychologists have demonstrated}, ``laptop multitasking hinders
 classroom learning for both users and nearby peers.'' I therefore
-discourage the use of laptops in the classroom, except to facilitate
-presentation.
-
-%There is little new in their finding that the allegedly multitasking
-%student does less well in class (11\% worse on the quiz in their
-%experiment). This effect has been shown many times. Rather, their novel
-%discovery is that classmates \emph{without} laptops who sat with a
-%\emph{view} of another student's screen did worse than the students who
-%had a computer (17\% worse than those with no laptop in sight).
+encourage the conscientious use of laptops, tablets, and other
+technology in the classroom. Please do your part to foster an
+environment of open dialogue by honouring the presence of your
+classmates.
