amend office hours, fix typos

--- a/HB/HB 3111-Genesis-Driver 2017.tex
+++ b/HB/HB 3111-Genesis-Driver 2017.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[2.1.0]{HB 3111}
+\coursecode[2.1.1]{HB 3111}
 \coursetitle[Hebrew Bible]{The Book of Genesis}
 
 % Taught as RLGS 3213 (T&I: Genesis) in:
@@ -24,7 +24,7 @@
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours{Tuesdays, 1:00--3:00 \PM}
+\officehours{Tuesdays, 1:30--3:30 \PM}
 
 \semester{Winter Term 2017}
 \meets{Fridays}% \meets{on}{at}{in}
@@ -57,8 +57,8 @@
 		distinguish text and interpretation by focusing on the afterlives of Adam and Eve;
 		analyze claims made by different faith communities on the legacy of Abraham;
 		critique specific arguments put forward by scholars about the meaning of select parts of Genesis;
-		generate questions relevant to the interpretation of a short passage from Genesis;
-		construct an original argument in aid of the exposition of a short passage from Genesis.
+		generate questions relevant to the interpretation of short passages from Genesis;
+		construct an original argument in aid of the exposition of short passages from Genesis.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -84,33 +84,33 @@ will be placed on a 2-hour reserve.
 	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
     \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 4th ed.
     Oxford / New York: Oxford University Press, 2010.
-    ISBN 978-0195289602.
+    \textsc{isbn} 978-0195289602.
 
 %	\bibitem[NJPS]{njps}
 %	Adele Berlin and Marc Zvi Brettler, eds.
 %	\emph{The Jewish Study Bible: Second Edition}.
 %	Oxford / New York: Oxford University Press, 2014.
-%	ISBN 978-0199978465.
+%	\textsc{isbn} 978-0199978465.
 
 	\bibitem[Anderson]{anderson} Gary A. Anderson.
 	\emph{The Genesis of Perfection: Adam and Eve in Jewish and Christian Imagination}.
 	Louisville: Westminster John Knox, 2002.
-	ISBN 978-0664226992.
+	\textsc{isbn} 978-0664226992.
 
 	\bibitem[Levenson]{levenson} Jon D. Levenson.
 	\emph{Inheriting Abraham: The Legacy of the Patriarch in Judaism, Christianity, and Islam}.
 	Princeton: Princeton University Press, 2012.
-	ISBN 978-0691163550.
+	\textsc{isbn} 978-0691163550.
 
 	\bibitem[Provan]{provan} Iain Provan.
 	\emph{Discovering Genesis: Content, Interpretation, Reception}.
 	Grand Rapids: Eerdmans, 2016.
-	ISBN 978-0802872371.
+	\textsc{isbn} 978-0802872371.
 
 %	\bibitem[tk]{tk} tk.
 %	\emph{tk}.
 %	tk: tk, 20tk.
-%	ISBN 978-tk.
+%	\textsc{isbn} 978-tk.
 
 \end{thebibliography}
 \endgroup
@@ -133,10 +133,10 @@ bibliographies in the required textbooks.
 \footnotesize\noindent
 M.\,M. Kalisch (1858)\\
 J.\,P. Lange (ET 1868)\\
-F.\,Delitzsch (\textsuperscript{5}1899)\\
+F. Delitzsch (\textsuperscript{5}1899)\\
 A. Dillmann (\textsuperscript{6}1892)\\
 H. Holzinger (1898)\\
-S\,R. Driver (1904)\\
+S.\,R. Driver (1904)\\
 J. Skinner (1910)\\
 H. Gunkel (\textsuperscript{4}1917)\\
 O. Procksch (\textsuperscript{3}1924)\\
@@ -152,7 +152,6 @@ R. Davidson (1973)\\
 C. Westermann (1974)\\
 B. Vawter (1977)\\
 N. Sarna (1989)\\
-%J. Walton (2001)\\
 J. Ebach [37--50, HthKAT] (2007)\\
 T. Longman (2016)\\
 C. Dohmen [1--11, KB] (2017)
