--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{grades.tex}[2016/01/04 v2.1 -- Course policy]
+\ProvidesFile{other.tex}[2016/01/05 v2.1 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
