fix the inevitabel (sic) typos

--- a/HB/HB 3112-Psalms-Driver 2017.tex
+++ b/HB/HB 3112-Psalms-Driver 2017.tex
@@ -342,11 +342,11 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 		alert to intertextual connections between it and other biblical
 		literature. Jot down your observations.
 
-		\item Consult your designated commentary. It should be read
-		carefully, too, but after you have got a sense for the psalm on
-		its own. One good approach might be to read the psalm twice,
-		make some preliminary notes, and then study your commentator and
-		fill out your preliminary notes.
+		\item Consult your commentary. It should be read carefully, too,
+		but after you have got a sense for the psalm on its own. One
+		good approach might be to read the psalm twice, make some
+		preliminary notes, and then study your commentator and fill out
+		your preliminary notes.
 
 		\item Augment your knowledge of each commentary you study by
 		reading about its place in reception history. Key recourses are
@@ -364,7 +364,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	your classmates, but you will need to read more widely on your own;
 	the seminar is only a starting point. You are expected to develop a
 	strong thesis, and to interact with a healthy representation of
-	secondary literature. The final paper is be due at the start of the
+	secondary literature. The final paper is due at the start of the
 	last class.
 
 \end{enumerate}
@@ -461,7 +461,7 @@ attention to text, translation, and commentary.
 
 	\item Select an example from \autoref{supplementary} or nominate an early modern or modern commentator of your own discovery.
 
-	\item If you have language skills beyond English this is an opportunity to put them to use. See the first pages of F.-L. Hossfeld and E. Zenger, \emph{Psalms 2: A Commentary on Psalms 51--100} (Minneapolis: Fortress, 2005) and \emph{Psalms 3: A Commentary on Psalms 101--150} (Minneapolis: Fortress Press, 2011), for lists of commentaries in an array of European languages.
+	\item If you have modern language skills beyond English, this is an opportunity to put them to use. See the first pages of F.-L. Hossfeld and E. Zenger, \emph{Psalms 2: A Commentary on Psalms 51--100} (Minneapolis: Fortress, 2005), and idem, \emph{Psalms 3: A Commentary on Psalms 101--150} (Minneapolis: Fortress Press, 2011), for lists of commentaries in an array of European languages.
 
   \end{enumerate}
 
@@ -472,15 +472,15 @@ attention to text, translation, and commentary.
 
 \begin{itemize}
 
-	\item Ancient Christian Commentary on Scripture, OT Vols. 7--8:
-	  Craig A. Blaising and Carmen Hardin, eds., \emph{Psalms 1--50} (Downers Grove: InterVarsity Press, 2008) and
+	\item Ancient Christian Commentary on Scripture, OT vols. 7--8:
+	  Craig A. Blaising and Carmen Hardin, eds., \emph{Psalms 1--50} (Downers Grove: InterVarsity Press, 2008);
 	  Quentin F. Wesselschmidt and Thomas C. Oden, eds., \emph{Psalms 51--150} (Downers Grove: InterVarsity Press, 2007).
 
 	\item Willaim Holladay, \emph{The Psalms through Three Thousand Years: Prayerbook of a Cloud of Witnesses} (Minneapolis: Fortress, 1993).
 
 	\item H. Attridge and M. Fassler, eds., \emph{Psalms in Community: Jewish and Christian Textual, Liturgical, and Artistic Traditions} (Leiden: Brill, 2004).
 
-	\item Susan Gillingham, \emph{Psalms Through the Centuries, Vol. 1} (Oxford: Blackwell, 2008) offers an \href{http://www.blackwellpublishing.com/pdf/9780631218555.pdf}{expanded online bibliography (PDF)}. Volume 2 has not yet appeared, but see her \emph{A Journey of Two Psalms: The Reception of Psalms 1 and 2 in Jewish and Christian Tradition} (Oxford: Oxford University Press, 2013) and \emph{Jewish and Christian Approaches to the Psalms: Conflict and Convergence} (Oxford: Oxford University Press, 2013).
+	\item Susan Gillingham, \emph{Psalms Through the Centuries, Vol. 1} (Oxford: Blackwell, 2008) offers an \href{http://www.blackwellpublishing.com/pdf/9780631218555.pdf}{expanded bibliography online (PDF)}. Volume 2 has not yet appeared, but see her \emph{A Journey of Two Psalms: The Reception of Psalms 1 and 2 in Jewish and Christian Tradition} (Oxford: Oxford University Press, 2013) and \emph{Jewish and Christian Approaches to the Psalms: Conflict and Convergence} (Oxford: Oxford University Press, 2013).
 
 	\item M. Sæbø, \emph{HB/OT}: For help with specific periods and commentators in biblical reception history see Magne Sæbø, ed., \emph{Hebrew Bible/Old Testament: The History of Its Interpretation} (3 vols.; Göttingen: Vandenhoeck \& Ruprecht, 1996--2015).
 
